Added the restaurant name and the address to the event page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -153,6 +153,17 @@
     </div>
           <% end %>
           
+    <div class="row">
+      <div class="col-md-12">
+        <div class="joinEvent">
+          <h2>Restaurant Details</h2>
+          Name: <strong><%= restaurant.name %></strong>
+          Address: <strong><%= restaurant.address %></strong>
+
+        </div>
+      </div>
+    </div>
+
 
     <div class="row">
       <div class="col-md-12">
