Added hidden fields for the restaurant id and the city selected. Added the value of the date field and storing it in a hidden field, need to check if the format is correct. Still need to add a field to store the time of the event

--- a/app/views/admin/event/_panel_three.html.erb
+++ b/app/views/admin/event/_panel_three.html.erb
@@ -21,6 +21,7 @@
       <div class="expandable-panel-content">
         <div class="row">
           <div class="col-md-5">
+            <%= f.hidden_field :restaurant_id %>
             <ul class="restaurantDetails">
               <% @restaurants.each do |restaurant| %>
                 <li class="<%= restaurant.city %>">
