--- a/app/views/admin/event/_panel_one.html.erb
+++ b/app/views/admin/event/_panel_one.html.erb
@@ -35,6 +35,7 @@
           </div>
           <div class="col-md-6">
             <label>Where do you want to conduct the event?</label>
+            <%= f.hidden_field :city %>
             <%= render 'city_select' %>
             
            </div>
