--- a/app/views/admin/event/_panel_two.html.erb
+++ b/app/views/admin/event/_panel_two.html.erb
@@ -27,7 +27,7 @@
             <div class="row">
               <div class="col-md-6">
 
-
+                <%= f.hidden_field :event_date %>
                 <div id="calendar"></div>
 
 
