--- a/app/views/admin/event/_panel_two.html.erb
+++ b/app/views/admin/event/_panel_two.html.erb
@@ -33,6 +33,8 @@
 
               </div>
               <div class="col-md-6">
+                <%= f.hidden_field :event_time %>
+
                 <div class="timeHeader" id="showDate">
                   Monday, 23 September 2013
                 </div>
@@ -60,14 +62,14 @@
                   <tr>
                     <td>06:00</td>
                     <td>06:30</td>
-                    <td>7:00</td>
-                    <td>7:30</td>
+                    <td>07:00</td>
+                    <td>07:30</td>
                   </tr>
                   <tr>
-                    <td>8:00</td>
-                    <td>8:30</td>
-                    <td>9:00</td>
-                    <td>9:30</td>
+                    <td>08:00</td>
+                    <td>08:30</td>
+                    <td>09:00</td>
+                    <td>09:30</td>
                   </tr>
                 </table>
                 
