--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -36,7 +36,7 @@
 						<li><a href="/admin">Dashboard</a></li>
 						<li><a href="/admin/users">Users</a></li>
 						<li><a href="/admin/restaurants">Restaurants</a></li>
-						<li><a href="/admin/event">Events</a></li>
+						<li><a href="/admin/events">Events</a></li>
 						<li><a href="/admin/invites">Invites</a></li>
 						<li><a href="/admin/history">History</a></li>	
 					</ul>
