Added the phone number and support email address to the event page. This is in case someone wants to contact us with questions

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -155,7 +155,23 @@
       </div>
     </div>
           <% end %>
+    
+    <div class="row">
+      <div class="col-md-12">
+        <div class="joinEvent">
+          <h2>Questions?</h2>
+          Email us: <strong>support@letsdine.co</strong><br/>
+          <% if @event.city == "Bangalore" %>
+            Phone Number: <strong>+91 9845546260</strong>
+          <% else %>
+            Phone Number: <strong>+91 9642460001</strong>
+          <% end %>
           
+
+        </div>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col-md-12">
         <div class="joinEvent">
