Precompiled assets and preparing to deploy to heroku

--- a/app/assets/stylesheets/admin/admin.css
+++ b/app/assets/stylesheets/admin/admin.css
@@ -496,6 +496,9 @@ table.ui-datepicker-calendar {
   left: 90%;
   margin-left: -11px; }
 
+.restaurantSelectedBG {
+  background: #f6f7f9; }
+
 /******************************************************************************/
 /* Dashboard Styling */
 /******************************************************************************/
