--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -701,6 +701,11 @@ table.ui-datepicker-calendar
 		left: 90%;
 		margin-left: -11px;
 	}
+
+.restaurantSelectedBG
+{
+	background: #f6f7f9;
+}
 /******************************************************************************/
 /* Dashboard Styling */
 /******************************************************************************/
