--- a/app/views/admin/events/_panel_one.html.erb
+++ b/app/views/admin/events/_panel_one.html.erb
@@ -35,8 +35,7 @@
           </div>
           <div class="col-md-6">
             <label>Where do you want to conduct the event?</label>
-            <%= f.hidden_field :city %>
-            <%= render 'city_select' %>
+            <%= render :partial => 'city_select', :locals => { :f => f } %>
             
            </div>
           </div>
