--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -85,8 +85,21 @@
           var timeAsFloat = parseFloat(timeString);
 
           var timeTwentyFourHour = timeAsFloat + 12;
+
+          var twentyFourHour = timeTwentyFourHour.toString().split(".")[0]; ///before
+
+          var twentyFourMin = timeTwentyFourHour.toString().split(".")[1]; ///after
+          if (typeof twentyFourMin != 'undefined')
+          {
+            var timeValToServer = twentyFourHour + ':' + twentyFourMin;
+          }
+          else
+          {
+              var timeValToServer = twentyFourHour + ':' + '00';
+          }
+          
           //var valueToStore = timeTwentyFourHour;
-          $('#event_event_time').val(timeTwentyFourHour);
+          $('#event_event_time').val(timeValToServer);
         };
 
         $('#infoTime').html(time + amOrPM);
@@ -101,8 +114,10 @@
             $('#event_restaurant_id').val(restaurantSelectedId);
         	var menuToShow = "#" + restaurantSelectedId;
         	$(menuToShow).show();
-        	$('.restaurantDetails li').removeAttr( 'style' );
-        	$(this).css('background','#f6f7f9')
+        	//$('.restaurantDetails li').removeAttr( 'style' );
+        	//$(this).css('background','#f6f7f9');
+          $('.restaurantDetails li').removeClass( 'restaurantSelectedBG' );
+ $(this).addClass('restaurantSelectedBG');
 
       });
 
@@ -136,6 +151,8 @@
       $('#cityList').removeClass('hidden_div');
       $('#cityList .content ul ul li').click(function(e){
         var citySelected = $(this).text();
+        console.log("The selected city is:");
+        console.log(citySelected);
         $('#event_city').val(citySelected);
         $('#cityList').addClass('hidden_div');
 
