--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -15,6 +15,7 @@
 	<%= javascript_include_tag "jquery-1.10.2.min" %>
 	<%= javascript_include_tag "bootstrap" %>
 	<%= javascript_include_tag "admin/highcharts" %>
+	<%= javascript_include_tag "admin/newEvent" %>
 	
 	<%= yield :javascript %>	
 	
