--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -220,7 +220,18 @@
 			</div>
 		</div>
 	</div>
-	
+	<script type="text/javascript">
+		var clicky_site_ids = clicky_site_ids || [];
+		clicky_site_ids.push(100656639);
+		(function() {
+		  var s = document.createElement('script');
+		  s.type = 'text/javascript';
+		  s.async = true;
+		  s.src = '//static.getclicky.com/js';
+		  ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+		})();
+	</script>
+	<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100656639ns.gif" /></p></noscript>
 </body>
 </html>
 
