--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,7 @@
     <%= csrf_meta_tags %>
 
 	<!--Start of Zopim Live Chat Script-->
+<!--
 	<script type="text/javascript">
 	window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
 	d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
@@ -66,6 +67,7 @@
 	$.src='//v2.zopim.com/?1LnC95LuebsHsuqgXQ7yrKldLcOpJoOo';z.t=+new Date;$.
 	type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 	</script>
+-->
 	<!--End of Zopim Live Chat Script-->
 
 	<!-- Start of Woopra Code -->
@@ -116,18 +118,19 @@
       <div class="container">
         <div class="row">
           
-          <div class="col-md-2 logo">
+          <div class="col-md-4 logo">
             <%= image_tag("logo.png")%>
           </div>
 
-          <div class="col-md-6">
-            <ul class="topNav pull-right">
-            	<!-- 
-              <li class="selected">Home</li>
+          <div class="col-md-4">
+            <ul class="topNav">
+
+              <li><a href="http://letsdine.uservoice.com">Support</a></li>
+              <!--
               <li>How it works</li>
               <li>About Us</li>
               <li>Contact Us</li>
-              -->
+				-->
             </ul>
 
           </div>
@@ -238,6 +241,28 @@
 	</div>
     <div id="push"></div>
 </div>
+	
+	<div class="userVoice">
+		<!-- UserVoice JavaScript SDK (only needed once on a page) -->
+<script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/2kAQ0y6iWR3eFD6OqGzg.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
+
+<!-- A tab to launch the Classic Widget -->
+<script>
+UserVoice = window.UserVoice || [];
+UserVoice.push(['showTab', 'classic_widget', {
+  mode: 'full',
+  primary_color: '#cc6d00',
+  link_color: '#007dbf',
+  default_mode: 'support',
+  forum_id: 224534,
+  tab_label: 'Feedback & Support',
+  tab_color: '#dd4024',
+  tab_position: 'middle-right',
+  tab_inverted: false
+}]);
+</script>	
+		
+	</div>
 
 	<div class="footer">
 		<div class="container">
