--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	
+	<!-- Begin Inspectlet Embed Code -->
+	<script type="text/javascript" id="inspectletjs">
+		window.__insp = window.__insp || [];
+		__insp.push(['wid', 995495447]);
+		(function() {
+			function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://www.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); }
+			if (window.attachEvent){
+				window.attachEvent('onload', __ldinsp);
+			}else{
+				window.addEventListener('load', __ldinsp, false);
+			}
+		})();
+	</script>
+	<!-- End Inspectlet Embed Code -->
 	<% if session[:city].nil? %>
 		<% session[:city] = "" %>
 	<% end %>
