--- a/app/views/admin/events/_panel_one.html.erb
+++ b/app/views/admin/events/_panel_one.html.erb
@@ -56,7 +56,8 @@
           <div class="row">
             <div class="col-md-12">
               <label for="event_description">Description for this event</label>
-              <%= f.text_area :event_description, :class => "form-control", :placeholder => "Enter a description for this event", :rows => "3" %>
+              <%# f.text_area :event_description, :class => "form-control", :placeholder => "Enter a description for this event", :rows => "3" %>
+              <%= f.text_area :event_description, :class=>"form-control",  :rows => 10, "data-provide"=> "markdown" %>
             </div>
           </div>
 
