Fixed the issue where the homepage partial description of the event was not showing up properly i.e. it was showing the raw markdown symbols. Added an image upload to the admin/event/new section. Removed the tabs from the admin/events/edit pages

--- a/app/views/admin/events/_panel_one.html.erb
+++ b/app/views/admin/events/_panel_one.html.erb
@@ -54,7 +54,16 @@
           </div>
 
           <div class="row">
-            <div class="col-md-12">
+             <div class="col-md-6">
+              <div class="form-group">
+                <%= f.label :event_image %>
+                <%= f.file_field :event_image %>  
+                <p class="help-block">This picture will be shown on the homepage and in the event page.</p>
+              </div>
+              
+
+            </div>
+            <div class="col-md-6">
               <label for="event_description">Description for this event</label>
               <%# f.text_area :event_description, :class => "form-control", :placeholder => "Enter a description for this event", :rows => "3" %>
               <%= f.text_area :event_description, :class=>"form-control",  :rows => 10, "data-provide"=> "markdown" %>
