--- a/app/views/events/_event_item.html.erb
+++ b/app/views/events/_event_item.html.erb
@@ -23,7 +23,7 @@
 				<i class="icon-map-marker"></i>
 				<%= restaurant.name %>
 			</span>   
-			<% event_description_html =  RedCloth.new(event.event_description).to_html %>      
+			<% event_description_html =  BlueCloth.new(event.event_description).to_html %>      
 			<%# simple_format(@event.event_description) %>      
 
 			<%# 
