--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -102,7 +102,7 @@ h4
 {
 	list-style: none;
 	color: white;
-	margin: 15px 0 0 0;
+	margin: 0 0 0 0;
 	padding: 0;
 	li
 	{
@@ -126,10 +126,10 @@ h4
 /*******************************************************************/
 /* Filter Styles */
 /*******************************************************************/
-.filter
+.headerCitySelect
 {
-	background: white;
-	padding: 20px 0;
+	//background: white;
+	//padding: 20px 0;
 	margin-bottom: 10px;
 	color: #737373;
 	#citySelect
