--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -1,61 +1,81 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-12">
-			<h1>Verify your details</h1>
+		<div class="col-md-6 col-md-offset-3	">
+			<div class="checkoutContainer">
+				<div class="checkoutHeader">
+				<h1>CHECKOUT</h1>
+			</div>
+			<div class="checkout">
+				
+				<div class="checkoutPurchaseDetails">
+					<strong><%= @event.event_name %></strong>
+					<div class="checkoutEventDescriptionSummary subText">
+						<% html = sanitize(BlueCloth.new(@event.event_description).to_html)  %>
+						<% description_to_show = truncate(Sanitize.clean(html), :length => 100) %>
+						<%= description_to_show %>
+					</div>
+					<div class="seatsPrice">
+						<div class="row">
+							<div class="col-md-4">
+								<strong><%= @attendee.seats %></strong>
+								<span class="subText">
+									<% if @attendee.seats > 1 %>
+										Seats
+									<% else %>
+										Seat
+									<% end %>
+								</span>
+							</div>
+							<div class="col-md-8">
+								<div class="pull-right">
+									<span class="subText">
+										Total:
+									</span>
+									<strong>RM <%= @total_price %></strong>	
+									
 
-			<table class="table">
-				<tr>
-					<th>Event Details</th>
-					<th>Seats</th>
-					<th>
-						<span class="pull-right">
-							Cost per seat
-						</span>
+								</div>
+
+							</div>
+						</div>
 						
-					</th>
-				</tr>
-				<tr>
-					<td>Event name</td>
-					<td>10 Seats</td>
-					<td>
-						<span class="pull-right">
-							Cost per seat
-						</span>
-					</td>
-				</tr>
-				<tr>
-					<td colspan="3">
-						<span class="pull-right">
-							<strong>Total Cost: RM 5000</strong>
-						</span>
-					</td>
-				</tr>
-			</table>
+					</div>
 
-			<h4>Total price to pay: RM 5000</h4>
+					<!-- IPay88 form start-->
+					<% stringToEncrypt = "mS7uLHMgnkM06101MYDEV#{@cart.id}100MYR"   %>
+					<% signatureToSendToIPay88 = @cart.signature(stringToEncrypt) %>
+					<FORM method="post" name="ePayment"
+					action="https://www.mobile88.com/epayment/entry.asp">
+						<INPUT type="hidden" name="MerchantCode" value="M06101">
+						<INPUT type="hidden" name="PaymentId" value="2">
+						<INPUT type="hidden" name="RefNo" value="MYDEV<%= @cart.id%>">
+						<INPUT type="hidden" name="Amount" value="1.00">
+						<INPUT type="hidden" name="Currency" value="MYR">
+						<INPUT type="hidden" name="ProdDesc" value="Event Seat">
+						<INPUT type="hidden" name="UserName" value="<%= @user.name %>">
+						<INPUT type="hidden" name="UserEmail" value="<%= @user.email %>">
+						<INPUT type="hidden" name="UserContact" value="<%= @attendee.phone_number %>">
+						<INPUT type="hidden" name="Remark" value="">
+						<INPUT type="hidden" name="Lang" value="">
+						<INPUT type="hidden" name="Signature" value="<%= signatureToSendToIPay88 %>">
+						<INPUT type="hidden" name="ResponseURL"
+						value="<%= payment_notifications_url %>">
+						<INPUT type="hidden" name="BackendURL"
+						value="<%= payment_notifications_url %>">
+						<INPUT type="submit" value="Proceed with Payment" name="Submit">
+					</FORM>
+					<!-- IPay88 form end -->
 
-			<!-- IPay88 form start-->
-			<FORM method="post" name="ePayment"
-			action="https://www.mobile88.com/ePayment/entry.asp">
-				<INPUT type="hidden" name="MerchantCode" value="M06101">
-				<INPUT type="hidden" name="PaymentId" value="2">
-				<INPUT type="hidden" name="RefNo" value="A00000001">
-				<INPUT type="hidden" name="Amount" value="1.00">
-				<INPUT type="hidden" name="Currency" value="MYR">
-				<INPUT type="hidden" name="ProdDesc" value="Photo Print">
-				<INPUT type="hidden" name="UserName" value="John Tan">
-				<INPUT type="hidden" name="UserEmail" value="john@hotmail.com">
-				<INPUT type="hidden" name="UserContact" value="0126500100">
-				<INPUT type="hidden" name="Remark" value="">
-				<INPUT type="hidden" name="Lang" value="UTF-8">
-				<INPUT type="hidden" name="Signature" value="84dNMbfgjLMS42IqSTPqQ99cUGA=">
-				<INPUT type="hidden" name="ResponseURL"
-				value="http://www.YourResponseURL.com/payment/response.asp">
-				<INPUT type="hidden" name="BackendURL"
-				value="http://www.YourBackendURL.com/payment/backend_response.asp">
-				<INPUT type="submit" value="Proceed with Payment" name="Submit">
-			</FORM>
-			<!-- IPay88 form end -->
+
+				</div>
+
+			</div>
+			
+
+			
+
+			
+			</div>
 
 
 		</div>
